Revert "Gentoo: nsswitch.conf: Add nss-systemd hook also to shadow and gshadow"
This reverts commit c834ea3358e6a3d74ed45b96168338f31dd0f080.

--- a/nss/nsswitch.conf
+++ b/nss/nsswitch.conf
@@ -61,7 +61,7 @@
 aliases:    files
 ethers:     files
 group:      files [SUCCESS=merge] systemd
-gshadow:    files systemd
+gshadow:    files
 hosts:      files dns
 # Allow initgroups to default to the setting for group.
 # initgroups: files
@@ -71,5 +71,5 @@ passwd:     files systemd
 protocols:  files
 publickey:  files
 rpc:        files
-shadow:     files systemd
+shadow:     files
 services:   files
