Revert "Enable nss-systemd in nsswitch.conf"
This reverts commit 5510d44bea20bbf9941c4a56a6e67a22b237ebcd.

--- a/nss/nsswitch.conf
+++ b/nss/nsswitch.conf
@@ -53,14 +53,14 @@
 # In alphabetical order. Re-order as required to optimize peformance.
 aliases:    files
 ethers:     files
-group:      files [SUCCESS=merge] systemd
+group:      files
 gshadow:    files
 hosts:      files dns
 # Allow initgroups to default to the setting for group.
 # initgroups: files
 netgroup:   files
 networks:   files dns
-passwd:     files systemd
+passwd:     files
 protocols:  files
 publickey:  files
 rpc:        files
